<resources>
    <string name="app_name">Enopeck e-Seal Track</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rapid_read">Rapid Read</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="info">Powered By SriBalaji +91 9930 22 52 87</string>
    <string-array name="options_array">
        <item>Home</item>
        <item>Generate Master Data</item>
        <item>Assign Tag</item>
        <item>Verify Tag</item>
        <item>Daily Report</item>
        <item>Devices Compatibility</item>
        <item>connect Your Devices</item>
        <item>Location Tracker</item>
        <item>About Us</item>
        <item>Stock Seal Report</item>
        <item>Battery Status</item>
        <item>Custom Incoming Container</item>
        <item>Verify Container</item>


    </string-array>
    <string-array name="options_array11">
        <item>Home</item>
        <item>Custom Incoming Container</item>
        <item>Verified Container</item>
        <item>Verified Tag</item>
        <item>connect Your Devices</item>
        <item>About As</item>
        <item>Battery Status</item>


    </string-array>
    <string-array name="options_array1">
        <item>Home</item>
        <item>Verify Tag</item>
        <item>Daily Report</item>
        <item>Devices Compatibility</item>
        <item>connect Your Devices</item>
        <item>Location Tracker</item>
        <item>About Us</item>
        <item>Stock Seal Report</item>
        <item>Battery Status</item>


    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antenna</string>
    <string name="title_activity_readers_list">Connect Your Device</string>
    <string name="title_activity_application_settings">Application</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string name="location">Location Track</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>RESV</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations">AccessOperationsActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="none_paired">No Devices Found</string>
    <string name="select_device">Select A Device</string>
    <string name="none_found">No Devices Found</string>
    <string name="error_security">Security Error in SerialPortActivity</string>
    <string name="error_unknown">Unknown Error in Serial Port Activity</string>
    <string name="error_configuration">Configuration Error in SerialPortActivity</string>
    <string name="title_activity_base_receiver">BaseReceiverActivity</string>
    <string name="error_unsatisfied_link">UnsatisfiedLinkError in SerialPortActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_regulatory_settings">Regulatory</string>
    <string name="title_activity_start_stop_trigger">Start\\Stop Triggers</string>
    <string name="title_activity_save_configuration">Save Configuration</string>
    <string name="title_activity_about">About Us</string>
    <string name="login">Welcome to e-Seal Track</string>
    <string name="title_activity_beeper">Beeper</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings_detail">Setting Details</string>
    <string name="action_search">Search</string>
    <string name="action_rr">Rapid Read</string>
    <string name="search_hint">Enter Tag ID</string>
    <string name="active_reader_title">Active Reader</string>
    <string name="available_readers_title">Available Devices</string>
    <string name="channel_selection">Channel Selection</string>
    <string name="reader_conn_sett">Reader Connection Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="tag_reporting">Tag Reporting</string>
    <string name="battery">Battery </string>
    <string name="battery_Status">Battery Status</string>
    <string name="rr_unique_tags_title">Unique Tags</string>
    <string name="rr_total_tag_title">TOTAL READS</string>
    <string name="rr_read_time_title">READ TIME</string>
    <string name="rr_read_rate_title">READ RATE</string>
    <string name="start_title">Assign Tag</string>
    <string name="tag_id">Tag ID</string>
    <string name="locationing_distance_title">Relative Distance</string>
    <string name="stop_title">STOP</string>
    <string name="tag_pattern_title">Tag Pattern</string>
    <string name="password_title">Password</string>
    <string name="memory_bank_title">Memory Bank</string>
    <string name="offset_title">Offset (words)</string>
    <string name="length_title">Length (words)</string>
    <string name="data_title">Data</string>
    <string name="operation_success">Operation Completed Successfully</string>
    <string name="read_title">READ</string>
    <string name="write_title">WRITE</string>
    <string name="lock_privilege_title">Lock Privilege</string>
    <string name="lock_title">LOCK</string>
    <string name="kill_pass_title">Kill Password</string>
    <string name="kill_title">KILL</string>
    <string name="offset_bits_title">Offset (words)</string>
    <string name="target_title">Target</string>
    <string name="action_title">Action</string>
    <string name="enable_filter_1">Enable Filter 1</string>
    <string name="enable_filter_2">Enable Filter 2</string>
    <string name="power_level_title">Power Level (dbm)</string>
    <string name="auto_reconnect_reader">Auto Reconnect Reader</string>
    <string name="readers_available">Reader Available</string>
    <string name="readers_connection">Reader Connection</string>
    <string name="reader_battery_status">Reader Battery Status</string>
    <string name="pc">PC</string>
    <string name="rssi">RSSI</string>
    <string name="phase">Phase</string>
    <string name="channel_index">Channel Index</string>
    <string name="tag_seen_count">Tag Seen Count</string>
    <string name="RFID_demo_app">Enopeck Seals Industries</string>
    <string name="moto_solutions">SriBalaji Barcode Private Limited \n +91 9930 22 52 87</string>
    <string name="develop">Designed &amp; Developed By :</string>
    <string name="rfid_sled">RFID sled:</string>
    <string name="module_version"> Version 1.0</string>
    <string name="radio_version">Radio Version</string>
    <string name="copyright_info">Copyright © 2017</string>
    <string name="colon">:</string>
    <string name="export_data_sett">Data Export Settings</string>
    <string name="export_data">Export Data</string>
    <string name="batch_mode_title">Batchmode</string>
    <string name="tag_report_settings_title">Tag Report Settings</string>
    <string name="batch_mode_settings_title">Batch Mode Settings</string>
    <string name="nfc_based_BT_connection">NFC</string>
    <string name="about">Since the last three decades, an Enopeck seal has established itself as the leader in the manufacturer of 100% pilfers proof sealing products. The quality and functional aspect of the devices have been given top most priority. The company has been on the constant look out for losses securing during the transit of valuable cargo and has thereby set itself on the task of designing manufacturing and marketing quality locking product. This in turn has put an end to pilferage and tampering of seals to an enormous extent. Customer confidence has been further enhanced as these seals are not available in the open market. The credentials of the actual users are thoroughly investigated to ensure that these products are not available for misuse. Hence, each seals are providing with your company logo and unique numbers.</string>
</resources>